# Embedded-Cpp-Isolation-Forest

./: CMakeLists.txt  LICENSE  README.md  build_and_run.bat
__ref/: IsolationForest.cpp  IsolationForest.h  main.cpp
include/: IsolationForest.h
src/: IsolationForest.cpp  main.cpp
